# bitcoin-demo-script

./: README.md  main.py  pyproject.toml  requirements.txt
convert_bitcoin/: __init__.py  retrieve_rates.py
prices/: __init__.py  retrieve_rates.py
